# freel-agent

./: README.md  package-lock.json  package.json  vite.config.ts
src/: App.css  App.tsx  systemPrompt.txt
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src-tauri/src/commands/: application.rs  browser.rs  desktop.rs  filesystem.rs  mod.rs  system.rs
src/agents/: prompts.ts  toolsExecutor.ts
src/components/: ChatInput.tsx  ChatList.tsx  Header.tsx  Live2DView.tsx  PluginView.tsx  SystemSettingsView.tsx
src/config/: plugins.ts
src/hooks/: useAgent.ts  useAudioRecorder.ts  useSettings.ts
src/modules/: BrowserModule.ts  FilesystemModule.ts
