[package]
name = "freel-desktop"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "freel_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.38.4"
ignore = "0.4"
winreg = "0.52"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
enigo = "0.1"
screenshots = "0.8.10"
base64 = "0.22.1"
tauri-plugin-store = "2.4.2"
battery = "0.7.8"
tauri-plugin-clipboard-manager = "2.3.2"
active-win-pos-rs = "0.10.0"
display-info = "0.5.9"
brightness = "0.8.0"
futures = "0.3.32"

